# ai_interviewer

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  project.md  pyproject.toml  test_llm.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
agents/: base_agent.py  dsa_agent.py  feedback_agent.py  interviewer_agent.py  jd_agent.py  orchestrator.py  question_agent.py  resume_agent.py  scoring_agent.py  skill_gap_agent.py
backend/: requirements.txt
backend/app/: config.py  main.py
backend/app/api/: admin.py  auth.py  code_execution.py  interviews.py  media.py
backend/app/db/: database.py  redis.py
backend/app/models/: interview.py  result.py  user.py
backend/docs/: api.rst  architecture.rst  conf.py  index.rst
backend/tests/: conftest.py  test_agents.py  test_auth.py  test_base_agent.py  test_interviews.py  test_orchestrator.py
frontend/: build-error.txt  build-output2.txt  eslint-output.txt  jest.setup.ts  next.config.ts  package-lock.json  package.json
frontend/__tests__/: page.test.tsx  store.test.tsx
frontend/docs/: README.md
frontend/src/: middleware.ts
infra/: deploy.ps1  deploy.sh
infra/docker/: Dockerfile.backend  Dockerfile.frontend
infra/k8s/: backend.yaml  database.yaml  deployment-backend.yaml  deployment-frontend.yaml  frontend.yaml  ingress.yaml
infra/terraform/: main.tf  outputs.tf  terraform.tfstate.backup  variables.tf
prompts/: dsa.txt  feedback.txt  interview.txt  jd_analysis.txt  question_generation.txt  resume_analysis.txt  scoring.txt  skill_gap.txt
(+51 files in other folders)
