[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-interviewer"
version = "1.0.0"
description = "AI-powered interview practice platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.1.0,<4.2",
    "openai>=1.58.0",
    "langchain>=0.3.14",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.60",
    "PyPDF2>=3.0.1",
    "python-dotenv>=1.0.1",
    "httpx>=0.28.0",
    "redis>=5.2.0",
    "email-validator>=2.0.0",
    "asyncpg>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]

[tool.setuptools.packages.find]
include = ["backend*", "agents*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "D", "I", "N"]
ignore = ["D100", "D104", "D107", "D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"
